Use a custom barebox configuration and enviroment

--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -16,4 +16,8 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-sama5d4_xplained"
 BR2_TARGET_AT91BOOTSTRAP3=y
 BR2_TARGET_AT91BOOTSTRAP3_DEFCONFIG="sama5d4_xplainedsd_uboot_secure"
 BR2_TARGET_BAREBOX=y
-BR2_TARGET_BAREBOX_BOARD_DEFCONFIG="sama5d4_xplained"
+BR2_TARGET_BAREBOX_USE_CUSTOM_CONFIG=y
+BR2_TARGET_BAREBOX_CUSTOM_CONFIG_FILE="board/develer/develboard/barebox-2015.02.0.config"
+BR2_TARGET_BAREBOX_BAREBOXENV=y
+BR2_TARGET_BAREBOX_CUSTOM_ENV=y
+BR2_TARGET_BAREBOX_CUSTOM_ENV_PATH="board/develer/develboard/barebox-2015.02.0-env"
