flash board from sdcard

--- a/buildroot/board/develer/develboard/barebox-2015.02.0.config
+++ b/buildroot/board/develer/develboard/barebox-2015.02.0.config
@@ -72,6 +72,7 @@ CONFIG_NAND=y
 # CONFIG_NAND_ECC_HW_SYNDROME is not set
 CONFIG_NAND_ATMEL=y
 CONFIG_NAND_ATMEL_PMECC=y
+CONFIG_MTD_UBI=y
 CONFIG_VIDEO=y
 CONFIG_DRIVER_VIDEO_ATMEL_HLCD=y
 CONFIG_MCI=y
