--- a/buildroot/board/develer/develboard/barebox-2015.02.0-env/config
+++ b/buildroot/board/develer/develboard/barebox-2015.02.0-env/config
@@ -2,7 +2,7 @@
 
 # use 'dhcp' to do dhcp in barebox and in kernel
 # use 'none' if you want to skip kernel ip autoconfiguration
-ip=dhcp
+ip=none
 
 # or set your networking parameters here
 #eth0.ipaddr=a.b.c.d
@@ -19,8 +19,8 @@ oftree_loc=nand
 
 # can be either 'jffs2' or 'ubifs'
 rootfs_type=ubifs
-rootfsimage=root.$rootfs_type
 ubiroot=rootfs
+rootfsimage=${ubiroot}.${rootfs_type}
 
 # The image type of the kernel. Can be uimage, zimage, raw, or raw_lzo
 kernelimage=zImage
@@ -33,7 +33,7 @@ m25p80_parts="64k(bootstrap),384k(barebox),256k(bareboxenv),256k(bareboxenv2),12
 
 autoboot_timeout=3
 
-bootargs="console=ttyS0,115200"
+bootargs="console=ttyS0,115200 earlyprintk"
 
 # set a fancy prompt (if support is compiled in)
 PS1="\e[1;32mbarebox@\e[1;31m\h:\w\e[0m\n# "
