--- a/buildroot/board/develer/develboard/linux-linux4sam_4.6.config
+++ b/buildroot/board/develer/develboard/linux-linux4sam_4.6.config
@@ -3,6 +3,8 @@
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_IRQ_DOMAIN_DEBUG=y
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=16
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
