--- a/buildroot/board/develer/develboard/barebox-2015.02.0-env/config
+++ b/buildroot/board/develer/develboard/barebox-2015.02.0-env/config
@@ -25,6 +25,9 @@ rootfsimage=${ubiroot}.${rootfs_type}
 # The image type of the kernel. Can be uimage, zimage, raw, or raw_lzo
 kernelimage=zImage
 
+# Initramfs image archive name
+initrdimage=rootfs.cpio.gz
+
 # The device tree image to pass the kernel
 oftreeimage=at91-sama5d4_xplained.dtb
 
