--- a/buildroot/board/develer/develboard/linux-linux4sam_4.6.config
+++ b/buildroot/board/develer/develboard/linux-linux4sam_4.6.config
@@ -17,6 +17,7 @@ CONFIG_BLK_CGROUP=y
 CONFIG_NAMESPACES=y
 CONFIG_SYSFS_DEPRECATED=y
 CONFIG_SYSFS_DEPRECATED_V2=y
+CONFIG_BLK_DEV_INITRD=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 CONFIG_SLAB=y
