--- a/buildroot/board/develer/develboard/barebox-2015.02.0.config
+++ b/buildroot/board/develer/develboard/barebox-2015.02.0.config
@@ -25,6 +25,7 @@ CONFIG_DEFAULT_ENVIRONMENT_PATH="arch/arm/boards/sama5d4_xplained/env"
 CONFIG_BAREBOXENV_TARGET=y
 CONFIG_DEBUG_INFO=y
 # CONFIG_CMD_ARM_CPUINFO is not set
+CONFIG_CMD_DMESG=y
 CONFIG_LONGHELP=y
 CONFIG_CMD_MEMINFO=y
 CONFIG_FLEXIBLE_BOOTARGS=y
