Add mmc as kernel/rootfs boot location

--- a/buildroot/board/develer/develboard/barebox-2015.02.0.config
+++ b/buildroot/board/develer/develboard/barebox-2015.02.0.config
@@ -48,6 +48,7 @@ CONFIG_CMD_SAVEENV=y
 CONFIG_CMD_BASENAME=y
 CONFIG_CMD_DIRNAME=y
 CONFIG_CMD_FILETYPE=y
+CONFIG_CMD_LN=y
 CONFIG_CMD_READLINK=y
 CONFIG_CMD_SLEEP=y
 CONFIG_CMD_DHCP=y
