--- a/buildroot/board/develer/develboard/linux-linux4sam_4.6.config
+++ b/buildroot/board/develer/develboard/linux-linux4sam_4.6.config
@@ -147,7 +147,13 @@ CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_OHCI_HCD=y
+CONFIG_USB_ACM=m
 CONFIG_USB_STORAGE=y
+CONFIG_USB_SERIAL=m
+CONFIG_USB_SERIAL_GENERIC=y
+CONFIG_USB_SERIAL_FTDI_SIO=m
+CONFIG_USB_SERIAL_PL2303=m
+CONFIG_USB_SERIAL_OPTION=m
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG_FS=y
 CONFIG_USB_ATMEL_USBA=m
