--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -14,6 +14,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git@github.com:linux4sam/linux-at91.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="linux4sam_4.6"
+BR2_LINUX_KERNEL_PATCH="board/develer/develboard/linux-linux4sam_4.6-patches"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/develer/develboard/linux-linux4sam_4.6.config"
 BR2_LINUX_KERNEL_ZIMAGE=y
