Set custom patches folder for at91bootstrap

--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -27,6 +27,7 @@ BR2_TARGET_ROOTFS_UBIFS=y
 BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x3E000
 BR2_TARGET_ROOTFS_UBIFS_MINIOSIZE=0x1000
 BR2_TARGET_AT91BOOTSTRAP3=y
+BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_PATCH_DIR="board/develer/develboard/at91bootstrap-3.7.1-patches"
 BR2_TARGET_AT91BOOTSTRAP3_USE_CUSTOM_CONFIG=y
 BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_CONFIG_FILE="board/develer/develboard/at91bootstrap-3.7.1.config"
 BR2_TARGET_BAREBOX=y
