--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -11,7 +11,7 @@ BR2_TARGET_TZ_INFO=y
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/develer/develboard/post-build.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git@github.com:linux4sam/linux-at91.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/linux4sam/linux-at91.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="linux4sam_4.6"
 BR2_LINUX_KERNEL_PATCH="board/develer/develboard/linux-linux4sam_4.6-patches"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
