--- a/buildroot/board/develer/develboard/barebox-2015.02.0.config
+++ b/buildroot/board/develer/develboard/barebox-2015.02.0.config
@@ -67,7 +67,6 @@ CONFIG_CMD_MEMTEST=y
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_NANDTEST=y
-CONFIG_CMD_SPI=y
 CONFIG_CMD_OFTREE=y
 CONFIG_CMD_TIME=y
 CONFIG_NET=y
@@ -75,7 +74,7 @@ CONFIG_NET_NFS=y
 CONFIG_OFDEVICE=y
 CONFIG_DRIVER_NET_MACB=y
 CONFIG_MICREL_PHY=y
-CONFIG_DRIVER_SPI_ATMEL=y
+# CONFIG_SPI is not set
 CONFIG_I2C=y
 CONFIG_I2C_GPIO=y
 CONFIG_MTD=y
