Let buildroot manage the rootfs overlay

--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -7,6 +7,7 @@ BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
 BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_TZ_INFO=y
+BR2_ROOTFS_OVERLAY="board/develer/develboard/rootfs-overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/develer/develboard/post-build.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
