--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -3,9 +3,9 @@ BR2_cortex_a5=y
 BR2_ARM_EABIHF=y
 BR2_ARM_ENABLE_NEON=y
 BR2_ARM_FPU_VFPV4D16=y
-BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
-BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
+BR2_TOOLCHAIN_BUILDROOT_EGLIBC=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_INIT_SYSTEMD=y
 BR2_TARGET_TZ_INFO=y
 BR2_ROOTFS_OVERLAY="board/develer/develboard/rootfs-overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/develer/develboard/post-build.sh"
