--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -21,6 +21,7 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-sama5d4_xplained"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/develer/develboard/busybox-1.23.1.config"
 BR2_PACKAGE_PV=y
+BR2_PACKAGE_DROPBEAR=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
