Enable systemd-networkd

--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -23,6 +23,7 @@ BR2_PACKAGE_BUSYBOX_CONFIG="board/develer/develboard/busybox-1.23.1.config"
 BR2_PACKAGE_PV=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_BASH=y
+BR2_PACKAGE_SYSTEMD_NETWORKD=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
