--- a/buildroot/package/Config.in
+++ b/buildroot/package/Config.in
@@ -1085,6 +1085,7 @@ endif
 	source "package/fmc/Config.in"
 	source "package/foomatic-filters/Config.in"
 	source "package/fping/Config.in"
+	source "package/genhostname/Config.in"
 	source "package/gesftpserver/Config.in"
 	source "package/gutenprint/Config.in"
 	source "package/hiawatha/Config.in"
