--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -45,6 +45,8 @@ BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_PATCH_DIR="board/develer/develboard/at91bootstr
 BR2_TARGET_AT91BOOTSTRAP3_USE_CUSTOM_CONFIG=y
 BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_CONFIG_FILE="board/develer/develboard/at91bootstrap-3.7.1.config"
 BR2_TARGET_BAREBOX=y
+BR2_TARGET_BAREBOX_CUSTOM_VERSION=y
+BR2_TARGET_BAREBOX_CUSTOM_VERSION_VALUE="2015.02.0"
 BR2_TARGET_BAREBOX_CUSTOM_PATCH_DIR="board/develer/develboard/barebox-2015.02.0-patches"
 BR2_TARGET_BAREBOX_USE_CUSTOM_CONFIG=y
 BR2_TARGET_BAREBOX_CUSTOM_CONFIG_FILE="board/develer/develboard/barebox-2015.02.0.config"
