fix: typo in toolchain tarball name

--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -6,7 +6,7 @@ BR2_ARM_FPU_VFPV4D16=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
-BR2_TOOLCHAIN_EXTERNAL_URL="https://people.develer.com/~mirko/develboard/arm-buildroot-linux-gnueabihf-20150814-01-tar.gz"
+BR2_TOOLCHAIN_EXTERNAL_URL="https://people.develer.com/~mirko/develboard/arm-buildroot-linux-gnueabihf-20150814-01.tar.gz"
 BR2_TOOLCHAIN_EXTERNAL_GCC_4_9=y
 BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_18=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
