Add and enable Connman, disable systemd-networkd

--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -27,11 +27,13 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-sama5d4_xplained"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/develer/develboard/busybox-1.23.1.config"
 BR2_PACKAGE_PV=y
+BR2_PACKAGE_CONNMAN=y
+BR2_PACKAGE_CONNMAN_LOOPBACK=y
+BR2_PACKAGE_CONNMAN_CLIENT=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_GENHOSTNAME=y
 BR2_PACKAGE_BASH=y
-BR2_PACKAGE_SYSTEMD_NETWORKD=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
