makefile: replace variable CCACHE_ENABLE in favor of FORCE_CCACHE (force enable only)

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ cache:
 script:
     - mkdir -p $HOME/.buildroot-dl
     - ln -s $HOME/.buildroot-dl buildroot/dl
-    - make CCACHE_ENABLE=1 -s
+    - make FORCE_CCACHE=1 -s
