--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ cache:
 script:
     - mkdir -p $HOME/.buildroot-dl
     - ln -s $HOME/.buildroot-dl buildroot/dl
-    - make FORCE_CCACHE=1 -s
+    - make FORCE_CCACHE=1 FORCE_TOOLCHAIN_EXTERNAL=1 -s
