Use official URL for external toolchain

--- a/buildroot/board/develer/develboard/buildroot-fragments/toolchain-external.config
+++ b/buildroot/board/develer/develboard/buildroot-fragments/toolchain-external.config
@@ -1,7 +1,7 @@
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
-BR2_TOOLCHAIN_EXTERNAL_URL="https://people.develer.com/~mirko/develboard/arm-buildroot-linux-gnueabihf-20150817-01.tar.gz"
+BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/DevelBoard/toolchains/raw/blue/arm-buildroot-linux-gnueabihf.tar.gz"
 BR2_TOOLCHAIN_EXTERNAL_GCC_4_9=y
 BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_18=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
