--- a/buildroot/board/develer/develboard/linux-linux4sam_4.7.config
+++ b/buildroot/board/develer/develboard/linux-linux4sam_4.7.config
@@ -109,6 +109,7 @@ CONFIG_SERIAL_ATMEL_CONSOLE=y
 # CONFIG_HW_RANDOM is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_AT91=y
+CONFIG_I2C_GPIO=y
 CONFIG_SPI=y
 CONFIG_SPI_ATMEL=y
 CONFIG_SPI_SPIDEV=y
