--- a/buildroot/board/develer/develboard/linux-linux4sam_4.7.config
+++ b/buildroot/board/develer/develboard/linux-linux4sam_4.7.config
@@ -102,6 +102,7 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=y
+CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_LEGACY_PTY_COUNT=4
 CONFIG_SERIAL_ATMEL=y
