--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,6 @@ script:
     - ln -s $HOME/.buildroot-dl buildroot/dl
     - make FORCE_CCACHE=1 FORCE_TOOLCHAIN_EXTERNAL=1 -s
     - multigz --force --best --rsyncable buildroot/output/images/rootfs.tar
+
+after_success:
+    - test "${TRAVIS_BRANCH}" = "master" && ./.travis.sh
