Pass --best to multigz

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ script:
     - mkdir -p $HOME/.buildroot-dl
     - ln -s $HOME/.buildroot-dl buildroot/dl
     - make FORCE_CCACHE=1 FORCE_TOOLCHAIN_EXTERNAL=1 -s
-    - multigz --force --rsyncable buildroot/output/images/rootfs.tar
+    - multigz --force --best --rsyncable buildroot/output/images/rootfs.tar
