--- a/buildroot/board/develer/develboard/at91bootstrap-3.7.2.config
+++ b/buildroot/board/develer/develboard/at91bootstrap-3.7.2.config
@@ -1,14 +1,11 @@
 CONFIG_SAMA5D4_XPLAINED=y
 CONFIG_CPU_CLK_528MHZ=y
-CONFIG_BUS_SPEED_176MHZ=y
 CONFIG_RAM_512MB=y
 CONFIG_SDCARD=y
 CONFIG_DEBUG=y
 CONFIG_SCLK=y
 # CONFIG_ENTER_NWD is not set
-CONFIG_PM_EXTERNAL_DEVICES=y
-CONFIG_MAC0_PHY=y
-CONFIG_HDMI=y
-CONFIG_ACT8865=y
-CONFIG_PMIC_ON_TWI3=y
-CONFIG_LOAD_EEPROM=y
+# CONFIG_HDMI is not set
+# CONFIG_PM_PMIC is not set
+# CONFIG_DISABLE_ACT8865_I2C is not set
+# CONFIG_LOAD_EEPROM is not set
