barebox: update to version v2015.10.0

--- a/buildroot/board/develer/develboard/barebox-2015.10.0.config
+++ b/buildroot/board/develer/develboard/barebox-2015.10.0.config
@@ -20,10 +20,10 @@ CONFIG_CMDLINE_EDITING=y
 CONFIG_AUTO_COMPLETE=y
 CONFIG_MENU=y
 CONFIG_CONSOLE_ACTIVATE_ALL=y
-CONFIG_DEFAULT_ENVIRONMENT_GENERIC=y
 CONFIG_DEFAULT_ENVIRONMENT_PATH="arch/arm/boards/sama5d4_xplained/env"
 CONFIG_BAREBOXENV_TARGET=y
 CONFIG_DEBUG_INFO=y
+# CONFIG_CMD_ARM_CPUINFO is not set
 CONFIG_CMD_DMESG=y
 CONFIG_LONGHELP=y
 CONFIG_CMD_MEMINFO=y
@@ -42,14 +42,18 @@ CONFIG_CMD_PARTITION=y
 CONFIG_CMD_AUTOMOUNT=y
 CONFIG_CMD_NV=y
 CONFIG_CMD_EXPORT=y
+CONFIG_CMD_GLOBAL=y
 CONFIG_CMD_LOADENV=y
 CONFIG_CMD_PRINTENV=y
+CONFIG_CMD_MAGICVAR=y
+CONFIG_CMD_MAGICVAR_HELP=y
 CONFIG_CMD_SAVEENV=y
 CONFIG_CMD_BASENAME=y
 CONFIG_CMD_DIRNAME=y
 CONFIG_CMD_FILETYPE=y
 CONFIG_CMD_LN=y
 CONFIG_CMD_READLINK=y
+CONFIG_CMD_GETOPT=y
 CONFIG_CMD_SLEEP=y
 CONFIG_CMD_DHCP=y
 CONFIG_NET_CMD_IFUP=y
@@ -60,7 +64,6 @@ CONFIG_CMD_ECHO_E=y
 CONFIG_CMD_EDIT=y
 CONFIG_CMD_MENU=y
 CONFIG_CMD_MENU_MANAGEMENT=y
-CONFIG_CMD_SPLASH=y
 CONFIG_CMD_READLINE=y
 CONFIG_CMD_TIMEOUT=y
 CONFIG_CMD_MEMTEST=y
@@ -98,4 +101,4 @@ CONFIG_FS_TFTP=y
 CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
 CONFIG_FS_FAT_LFN=y
-CONFIG_PNG=y
+CONFIG_ZLIB=y
