--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -40,6 +40,7 @@ BR2_PACKAGE_CONNMAN_CLIENT=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_GENHOSTNAME=y
+BR2_PACKAGE_OPKG=y
 BR2_PACKAGE_BASH=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
 BR2_TARGET_ROOTFS_UBIFS=y
