--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -27,6 +27,8 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-sama5d4_xplained"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/develer/develboard/busybox-1.23.1.config"
 BR2_PACKAGE_PV=y
+BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_OPENSSL_BIN=y
 BR2_PACKAGE_AVAHI=y
 # BR2_PACKAGE_AVAHI_AUTOIPD is not set
 BR2_PACKAGE_AVAHI_DAEMON=y
