--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -3,6 +3,7 @@ BR2_cortex_a5=y
 BR2_ARM_EABIHF=y
 BR2_ARM_ENABLE_NEON=y
 BR2_ARM_FPU_VFPV4D16=y
+BR2_GLOBAL_PATCH_DIR="board/develer/develboard/patches"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
