--- a/buildroot/board/develer/develboard/at91bootstrap-3.7.2.config
+++ b/buildroot/board/develer/develboard/at91bootstrap-3.7.2.config
@@ -3,6 +3,7 @@ CONFIG_CPU_CLK_528MHZ=y
 CONFIG_RAM_128MB=y
 CONFIG_SDCARD=y
 CONFIG_DEBUG=y
+CONFIG_HW_INIT_PIO=y
 CONFIG_SCLK=y
 # CONFIG_ENTER_NWD is not set
 # CONFIG_HDMI is not set
