barebox: dboard command for nand write protection

--- a/buildroot/board/develer/develboard/barebox-2015.10.0.config
+++ b/buildroot/board/develer/develboard/barebox-2015.10.0.config
@@ -70,6 +70,7 @@ CONFIG_CMD_MEMTEST=y
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_NANDTEST=y
+CONFIG_CMD_DBOARD_UTILS=y
 CONFIG_CMD_OFTREE=y
 CONFIG_CMD_TIME=y
 CONFIG_NET=y
