kernel: create a develboard specific device tree file

--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -25,7 +25,7 @@ BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/develer/develboard/linux-linux4sam_4.7.config"
 BR2_LINUX_KERNEL_ZIMAGE=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-sama5d4_xplained"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-sama5d4_develboard"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/develer/develboard/busybox-1.23.1.config"
 BR2_PACKAGE_PV=y
 BR2_PACKAGE_CA_CERTIFICATES=y
