barebox: enable splash command and atmel-hlcdc video driver

--- a/buildroot/board/develer/develboard/barebox-2015.10.0.config
+++ b/buildroot/board/develer/develboard/barebox-2015.10.0.config
@@ -64,6 +64,7 @@ CONFIG_CMD_ECHO_E=y
 CONFIG_CMD_EDIT=y
 CONFIG_CMD_MENU=y
 CONFIG_CMD_MENU_MANAGEMENT=y
+CONFIG_CMD_SPLASH=y
 CONFIG_CMD_READLINE=y
 CONFIG_CMD_TIMEOUT=y
 CONFIG_CMD_MEMTEST=y
@@ -90,6 +91,8 @@ CONFIG_NAND_ALLOW_ERASE_BAD=y
 CONFIG_NAND_ATMEL=y
 CONFIG_NAND_ATMEL_PMECC=y
 CONFIG_MTD_UBI=y
+CONFIG_VIDEO=y
+CONFIG_DRIVER_VIDEO_ATMEL_HLCD=y
 CONFIG_MCI=y
 CONFIG_MCI_STARTUP=y
 CONFIG_MCI_ATMEL=y
@@ -102,4 +105,5 @@ CONFIG_FS_TFTP=y
 CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
 CONFIG_FS_FAT_LFN=y
-CONFIG_ZLIB=y
+CONFIG_BMP=y
+CONFIG_PNG=y
