barebox: build all from custom DevelBoard repository

--- a/buildroot/configs/develer_develboard_defconfig
+++ b/buildroot/configs/develer_develboard_defconfig
@@ -37,11 +37,10 @@ BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_PATCH_DIR="board/develer/develboard/at91bootstr
 BR2_TARGET_AT91BOOTSTRAP3_USE_CUSTOM_CONFIG=y
 BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_CONFIG_FILE="board/develer/develboard/at91bootstrap-3.7.2.config"
 BR2_TARGET_BAREBOX=y
-BR2_TARGET_BAREBOX_CUSTOM_VERSION=y
-BR2_TARGET_BAREBOX_CUSTOM_VERSION_VALUE="2015.10.0"
-BR2_TARGET_BAREBOX_CUSTOM_PATCH_DIR="board/develer/develboard/barebox-2015.10.0-patches"
-BR2_TARGET_BAREBOX_USE_CUSTOM_CONFIG=y
-BR2_TARGET_BAREBOX_CUSTOM_CONFIG_FILE="board/develer/develboard/barebox-2015.10.0.config"
+BR2_TARGET_BAREBOX_CUSTOM_GIT=y
+BR2_TARGET_BAREBOX_CUSTOM_GIT_REPO_URL="https://github.com/DevelBoard/barebox.git"
+BR2_TARGET_BAREBOX_CUSTOM_GIT_VERSION="ed0f76edc"
+BR2_TARGET_BAREBOX_BOARD_DEFCONFIG="develer_develboard"
 BR2_TARGET_BAREBOX_BAREBOXENV=y
 BR2_TARGET_BAREBOX_CUSTOM_ENV=y
 BR2_TARGET_BAREBOX_CUSTOM_ENV_PATH="board/develer/develboard/barebox-2015.10.0-env"
